@@ -69,6 +69,7 @@ TEMP_MINIISO = $(TEMP)/mini.iso
 TEMP_EXTRA = $(TEMP)/$(EXTRANAME).img
 TEMP_BOOT_SCREENS = $(TEMP)/boot_screens
 TEMP_CD_TREE = $(TEMP)/cd_tree
+TEMP_POWERPC_INITRD = $(TEMP)/powerpc_initrd_tree
 
 DPKGDIR = $(TREE)/var/lib/dpkg
 
