@@ -1,6 +1,6 @@
 MEDIA_TYPE = netboot image
 
-TARGET = $(INITRD) $(KERNEL)
+TARGET = $(INITRD) $(KERNEL) $(TEMP_BOOT)
 EXTRANAME = $(MEDIUM)/
 
 # FIXME: Temporary fix, these files should be in a udeb!
