@@ -4,3 +4,18 @@ FLOPPY_SIZE = 1440
 
 # media where images may be written to (via dd).
 WRITE_MEDIA += $(FLAVOUR_SUPPORTED)
+
+arch_boot:
+	mkdir -p $(shell dirname $(TEMP_BOOT))
+	dd if=/dev/zero of=$(TEMP_BOOT).new bs=1024 count=$(FLOPPY_SIZE)
+	hformat -l $(DISK_LABEL) $(TEMP_BOOT).new
+	gzip -vc9 $(TEMP_KERNEL) > $(TEMP_KERNEL).gz
+	echo device $(TEMP_BOOT).new > $(TEMP)/miboot.conf
+	echo kernel $(TEMP_KERNEL).gz $(KERNEL_CMDL) >> $(TEMP)/miboot.conf
+	miboot -c $(TEMP)/miboot.conf
+	mv $(TEMP_BOOT).new $(TEMP_BOOT)
+
+arch_root:
+	cp $(TEMP_INITRD) $(TEMP_ROOT)
+
+arch_boot_screens:
