@@ -1,6 +1,6 @@
 MEDIA_TYPE = netboot image
 
-TARGET = $(INITRD) $(KERNEL)
+TARGET = $(INITRD) $(KERNEL) $(TEMP_BOOT)
 EXTRANAME = $(MEDIUM)/
 
 # FIXME: Temporary fix, these files should be in a udeb!
@@ -9,3 +9,4 @@ EXTRALIBS = /lib/libnss_dns* /lib/libresolv*
 MANIFEST-BOOT = "tftp boot image for most PowerPC CPUs"
 MANIFEST-INITRD = "initrd for use with powerpc netboot"
 MANIFEST-KERNEL = "kernel for use with powerpc netboot"
+
