@@ -2,14 +2,15 @@ debian-installer (20040327) UNRELEASED; urgency=low
 
   * Sven Luther
     - Added powerpc-builtin-initrd.sh script to build kernels with builtin
-      initrd. Need to find the proper place to call it yet though.
+      initrd, and actually build the initrd builtin kernels for all targets
+      except powerpc-small floppies.
   * Joey Hess
     - Some manifest fixups.
   * Colin Watson
     - Add manifest info for powerpc.
   * Vincent Sanders
     - Add boot.init to netwinder netboot target
-	
+
  -- Joey Hess <joeyh@debian.org>  Fri, 26 Mar 2004 19:41:57 -0500
 
 debian-installer (20040326) unstable; urgency=low
